--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+        {% block stylesheets %}
+        {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
