--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,17 @@
         {% block stylesheets %}
         {% endblock %}
     </head>
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+        <h5 class="my-0 mr-md-auto font-weight-normal">
+            <a class="p-2 text-dark" href="/">UE Framework</a>
+        </h5>
+        <nav class="my-2 my-md-0 mr-md-3">
+            <a class="p-2 text-dark" href="#">Menu</a>
+        </nav>
+    </div>
+    <div class="container">
+        <h1>{{ title }}</h1>
+    </div>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
