--- a/templates/accueil/home.html.twig
+++ b/templates/accueil/home.html.twig
@@ -1,8 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div>
-    {{ host }} {{ firstname }}
-</div>
-
+<h1>Accueil</h1>
 {% endblock %}
