--- a/templates/account.html.twig
+++ b/templates/account.html.twig
@@ -4,7 +4,9 @@
 
     {{ form_start(formInfo) }}
     {{ form_row(formInfo.email) }}
+    {{ form_errors(formInfo.email) }}
     {{ form_row(formInfo.password) }}
+    {{ form_errors(formInfo.password) }}
     {{ form_end(formInfo) }}
 
 {% endblock %}
