--- a/templates/auth.html.twig
+++ b/templates/auth.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    {{ data.email }}
-    {{ data.password }}
+    {{ user.email }}
+    {{ user.password }}
 
 {% endblock %}
