--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -2,6 +2,12 @@
 
 {% block body %}
 
-    {{ form(formInfo) }}
+    {{ form_start(form) }}
+
+    <div class="form-inline form-group mb-2">
+        {{ form_widget(form.email, {'attr': {'placeholder': 'Email' }}) }}
+        {{ form_widget(form.password, {'attr': {'placeholder': 'Password' }}) }}
+        {{ form_end(form) }}
+    </div>
 
 {% endblock %}
